test/valid/fc36994_TestToString/TestToString.plume
/**
 * Tests toString()
 * @author 36994, César Santos
 */
class TestToString extends Object is
  method main : () -> String is //expected : true
    true.toString()