test/invalid/SelfExtends/SelfExtends.plume
/**
 * Self extending class
 * @author 36994, César Santos
 */
class SelfExtends extends SelfExtends is
  method test : () -> Boolean is
    true